tests/variables/valid/assign_val.amu
main() : s32 {
    a:s32;
    b:s32 = a = 2;
    return a+b;
}