tests/variables/invalid/syntax_err_no_semicolon.amu
main() : s32 {
    a:s32 = 2
    a = a + 4;
    return a;
}